--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "laravel/jetstream": "^1.3",
         "laravel/sanctum": "^2.6",
         "laravel/tinker": "^2.0",
+        "laraveles/spanish": "^1.5",
         "livewire/livewire": "^2.0",
         "mercadopago/dx-php": "2.1.1"
     },
