--- a/package.json
+++ b/package.json
@@ -10,16 +10,19 @@
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
+        "@tailwindcss/postcss7-compat": "^2.0.2",
         "@tailwindcss/ui": "^0.5.0",
+        "autoprefixer": "^9.8.6",
         "axios": "^0.19",
         "cross-env": "^7.0",
         "laravel-mix": "^5.0.1",
         "lodash": "^4.17.19",
+        "postcss": "^7.0.35",
         "postcss-import": "^12.0.1",
         "resolve-url-loader": "^3.1.0",
         "sass": "^1.29.0",
         "sass-loader": "^8.0.2",
-        "tailwindcss": "^1.3.0",
+        "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.2",
         "tailwindcss-spinner": "^1.2.0",
         "vue-template-compiler": "^2.6.12"
     },
